# NERD

crew_ai_part/: .gitignore  README.md  pyproject.toml  test.py
crew_ai_part/src/renalyser/: crew.py  main.py  test.py
crew_ai_part/src/renalyser/.gradio/flagged/: dataset1.csv  dataset2.csv
crew_ai_part/src/renalyser/.gradio/flagged/Upload CSV File/d9f10008041e6d52a56a/: large_network_slices_dataset.csv
crew_ai_part/src/renalyser/config/: agents.yaml  tasks.yaml
crew_ai_part/src/renalyser/tools/: custom_tool.py
