[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "Dataset validation and web scraping comparison with CrewAI and Streamlit"
authors = ["Devarajan S"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
pandas = "^2.0.0"
requests = "^2.31.0"
newspaper3k = "^0.2.8"
beautifulsoup4 = "^4.12.3"
crewai = "^0.2.0"
